# ox-loves-trading-website

./: .buildinfo  .buildinfo.bak  CHANGELOG.md  CNAME  README.md  _config.yml  about.markdown  applem1pro.html  applem1pro2.html  config.toml  deepdive-into-apple-pu.html  exploring-mac-m1-pro-isa.html  genindex.html  index.html  jaded.html  objects.inv  openmp.html  pyproject.toml  search.html  searchindex.js  speedrunning-openMP.html  trading.html  trolling.html
.doctrees/: applem1pro.doctree  applem1pro2.doctree  deepdive-into-apple-pu.doctree  environment.pickle  exploring-mac-m1-pro-isa.doctree  index.doctree  jaded.doctree  openmp.doctree  trading.doctree  trolling.doctree
_layouts/: post.html
_posts/: 2024-07-28-welcome-to-jekyll.markdown  2024-07-28-why-i-love-trading.markdown  2024-07-28-zen-and-the-art-of-trolling.markdown  2024-07-29-determinism.markdown  2024-07-29-importance-of-nerdiness.markdown  2024-07-29-my-python-setup.markdown  2024-09-21-exploring-mac-m1-pro-isa.md  2024-09-26-speedrunning-openMP.md  2024-10-04-state-the-obvious.markdown  2024-10-20-a-primer-on-simulations.markdown  2024-10-22-cpp-in-vscode.markdown  2024-10-22-emh.markdown  2024-10-23-how-cmake-works.markdown  2024-12-14-an-overview-of-human-cloning.markdown
_sources/: exploring-mac-m1-pro-isa.rst.txt  index.rst.txt  jaded.rst.txt  trading.rst.txt
blog/: deepdive-into-apple-pu.html  exploring-mac-m1-pro-isa.html  index.html  speedrunning-openMP.html
content/: _index.md  how-i-made-this-site.md
docs/: .buildinfo  .buildinfo.bak  CNAME  docs-rust.html  genindex.html  (+10 more)
(+41 files in other folders)
