[project]
name = "ox-loves-trading-website"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "linkify-it-py>=2.0.3",
    "myst-parser>=4.0.0",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
